# onitama-alphazero

./: .gitignore  Cargo.toml  LICENSE  README.md
alphazero-training/: Cargo.toml
alphazero-training/src/: common.rs  elo_rating.rs  evaluator.rs  lib.rs  net.rs  stats.rs  train.rs
alphazero-training/src/alphazero_mcts/: mcts_arena.rs  mod.rs
assets/images/: icons.drawio
gui/: Cargo.toml
gui/src/: main.rs
gui/src/onitama_gui/: message.rs  mod.rs
models/: model.ot  model_1e-2.ot  model_5e-3_3_resnet.ot  model_5e-3_c2.ot
onitama-alphazero/: Cargo.toml
onitama-game/: Cargo.toml
onitama-game/src/: lib.rs
onitama-game/src/ai/: agent.rs  human_console.rs  human_gui.rs  mcts.rs  mod.rs  random.rs
onitama-game/src/ai/alpha_beta/: evaluation.rs  mod.rs
onitama-game/src/ai/mcts/: mcts_arena.rs  mod.rs
onitama-game/src/common/: mod.rs
onitama-game/src/game/: card.rs  deck.rs  done_move.rs  game.rs  game_state.rs  mod.rs  move.rs  move_result.rs  piece.rs  player_color.rs  state.rs
onitama-gui/: Cargo.toml
onitama-gui/src/: cell.rs  game_config.rs  image.rs  main.rs  move_card.rs  move_history.rs  onitama.rs  ontiama_config.rs  player.rs  selected_card.rs  setup_window.rs
onitama-gui/src/game_board/: cell.rs  figure.rs  mod.rs  piece.rs
onitama-gui/src/game_setup/: mod.rs  participants.rs  player_setups.rs  setup_window.rs  tournament.rs
onitama-gui/src/move_card/: cell.rs  mod.rs
onitama-training/: Cargo.toml
src/: main.rs
src/ai/: agent.rs  human.rs  human_console.rs  mod.rs  random.rs
src/common/: mod.rs
src/game/: card.rs  deck.rs  figure.rs  game.rs  mod.rs  move.rs  move_result.rs  player_color.rs  state.rs
ui/: Cargo.toml
