[package]
name = "onitama-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onitama_game = { path = "../onitama-game" }
egui ="0.21.0"
eframe = "0.21.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
image = { version = "0.24", default-features = false, features = ["png"] }
