[package]
name = "onitama_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onitama_game = { path = "../onitama-game" }
iced = { version = "0.8.0", features = ["canvas", "tokio", "debug"] }
tokio = { version = "1.26.0", features = ["sync"] }
env_logger = "0.10.0"